# openmailserver

./: .coverage  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/dovecot/: dovecot-sql.conf.ext.template  dovecot.conf
config/postfix/: main.cf.template
config/postfix/sql/: virtual_aliases.cf  virtual_domains.cf  virtual_mailboxes.cf
docs/: README.md  api.md  architecture.md  deliverability.md  dns.md  domains.md  install.md  operations.md  platforms.md  runtime-removal-matrix.md  security.md
scripts/: bootstrap.sh
src/openmailserver/: __init__.py  app.py  cli.py  config.py  database.py  deps.py  models.py  schemas.py  security.py  telemetry.py
src/openmailserver/api/: __init__.py  debug.py  domains.py  health.py  mail.py  mailboxes.py  router.py
src/openmailserver/db/: __init__.py
src/openmailserver/platform/: __init__.py  base.py  detect.py  linux.py  macos.py
src/openmailserver/services/: __init__.py  backup_service.py  debug_service.py  dns_service.py  domain_service.py  installer.py  logging_service.py  mailbox_reader_service.py  mailbox_service.py  maildir_service.py  mox_service.py  outbound_service.py  queue_service.py  runtime_secret_service.py  runtime_setup.py
tests/: conftest.py  test_api.py  test_app.py  test_cli.py  test_database.py  test_deps.py  test_models.py  test_security.py
tests/api/: test_debug.py  test_domains.py  test_health.py  test_mail.py  test_mailboxes.py
tests/e2e/: test_magic_moment.py
tests/platform/: test_base.py  test_detect.py  test_linux.py  test_macos.py  test_platforms.py
tests/services/: test_backup_service.py  test_debug_service.py  test_dns_service.py  test_domain_service.py  test_installer.py  test_logging_service.py  test_mailbox_reader_service.py  test_mailbox_service.py  test_maildir_service.py  test_mox_service.py  test_outbound_service.py  test_queue_service.py  test_runtime_setup.py
