[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "openmailserver"
version = "0.1.0"
description = "Self-hostable mailserver control plane for agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Openmailserver Contributors" }
]
dependencies = [
  "alembic>=1.14.0",
  "bcrypt>=4.2.0",
  "cryptography>=43.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.17",
  "sqlalchemy>=2.0.36",
  "typer>=0.15.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.0",
]

[project.scripts]
openmailserver = "openmailserver.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openmailserver"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
